--- a/style.css
+++ b/style.css
@@ -114,11 +114,10 @@ ul.phoen_list li.product {
    top: 8px;
    left: 23px;
 }
-/* .navbar-nav li a {
-   color: #333 !important;
+
+.bg-basictheme {
+   background-color: #65cd00 !important;
 }
-@media (min-width: 1200px) {
-   .navbar-nav li a {
-      color: #333 !important;
-   }
-} */
+.navbar-dark .navbar-nav .nav-link {
+   color: rgba(255, 255, 255, 0.9);
+}
