--- a/assets/css/primary-mobile-nav.css
+++ b/assets/css/primary-mobile-nav.css
@@ -5,7 +5,6 @@
    bottom: 0;
    left: -305px;
    z-index: 1000;
-   margin-top: 46px;
    background-color: #ffffff;
    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1),
       0 3px 12px 0 rgba(0, 0, 0, 0.08), 0 5px 18px 0 rgba(0, 0, 0, 0.06);
@@ -28,4 +27,14 @@
    color: #65cd00;
    font: 400 20px;
    letter-spacing: 1.1px;
+}
+
+.sidebar_top_margin {   
+   margin-top: 46px;
+}
+
+@media (min-width: 768px) { 
+   .sidebar_top_margin {   
+      margin-top: 32px;
+   }
 }
