--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ Tags: light, colorful, minimal
 @import './assets/css/currency-converter-widget.css';
 @import './assets/css/wooc-search-form.css';
 @import './assets/css/front-page.css';
+@import './assets/css/footer-widgets.css';
 
 body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
@@ -72,7 +73,12 @@ body {
    letter-spacing: 2px;
 }
 footer {
-   padding: 100px 0 35px 0;
+   margin-bottom: 0;
+   padding: 50px 0 35px 0;
+   background: #f2f2f2;
+}
+.footer-row-primary {
+   margin-bottom: 4rem;
 }
 .woocommerce-breadcrumb {
    text-align: center;
@@ -128,4 +134,21 @@ ul.phoen_list li.product {
 }
 #apbd-mini-cart-container {
    z-index: 1000 !important;
+}
+
+.mobile_sidebar_close-wrapper {
+   padding: 15px;
+   padding-right: 30px;
+   font-size: 20px;
+   font-weight: 100;
+}
+
+.mobile_sidebar_close-wrapper span {
+   cursor: pointer;
+   color: #777777;
+}
+
+.navbar-dark .navbar-toggler {
+   border-color: rgba(255, 255, 255, .6) !important;
+   outline: none !important;
 }
